@@ -25,6 +25,7 @@
 
 .filterPane {
   padding: 20px 0;
+  border-bottom: 1px solid gray;
 }
 
 .border-bottom {
